     moving the state of a parent tree to a new version via a delta rather than
     a complete replacement tree. (Robert Collins)

   * New method ``bzrlib.osutils.minimum_path_selection`` useful for removing
     duplication from user input, when a user mentions both a path and an item
     contained within that path. (Robert Collins)

   * New method on ``bzrlib.tree.Tree`` ``path_content_summary`` provides a
     tuple containing the key information about a path for commit processing
     to complete. (Robert Collins)

   * New method on xml serialisers, write_inventory_to_lines, which matches the
     API used by knits for adding content. (Robert Collins)

   * New helper ``bzrlib.tuned_gzip.bytes_to_gzip`` which takes a byte string
     and returns a gzipped version of the same. This is used to avoid a bunch
     of api friction during adding of knit hunks. (Robert Collins)

   * New parameter on ``bzrlib.transport.Transport.readv``
     ``adjust_for_latency`` which changes readv from returning strictly the
     requested data to inserted return larger ranges and in forward read order
     to reduce the effect of network latency. (Robert Collins)

   * New parameter yield_parents on ``Inventory.iter_entries_by_dir`` which
     causes the parents of a selected id to be returned recursively, so all the
     paths from the root down to each element of selected_file_ids are
     returned. (Robert Collins)

   * Knit joining has been enhanced to support plain to annotated conversion
     and annotated to plain conversion. (Ian Clatworthy)

   * The CommitBuilder method ``record_entry_contents`` now returns summary
     information about the effect of the commit on the repository. This tuple
     contains an inventory delta item if the entry changed from the basis, and a
     boolean indicating whether a new file graph node was recorded.
     (Robert Collins)

  TESTING:

   * New transport implementation ``trace+`` which is useful for testing,